	PR c++/85587 - error with scoped enum in template. 	* semantics.c (finish_qualified_id_expr): Don't return an 	unqualified IDENTIFIER_NODE.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-8-branch@259824 138bc75d-0d04-0410-961f-82ee72b054a4